--- a/theme.toml
+++ b/theme.toml
@@ -5,7 +5,7 @@ name = "Github Style"
 license = "MIT"
 licenselink = "https://github.com/MeiK2333/github-style/blob/master/LICENSE"
 description = "github-style hugo theme"
-homepage = "http://example.com/"
+homepage = "https://github.com/MeiK2333"
 tags = ["blog", "google analytics"]
 features = ["google analytics"]
 min_version = "0.41"
