--- a/config.template.toml
+++ b/config.template.toml
@@ -22,6 +22,7 @@ pygmentsUseClasses = true
   lastmod = true
   favicon = "/images/github.png"
   location = "China"
+  userStatusEmoji = "😀"
 
   [[params.links]]
     title = "Link"
