--- a/config.template.toml
+++ b/config.template.toml
@@ -37,7 +37,7 @@ pygmentsUseClasses = true
     pagerDirection = "last" # Comment sorting direction, available values are 'last' and 'first'.
     createIssueManually = true # 设置为true，如果是管理员登录，会自动创建issue，如果是false，需要管理员手动添加第一个评论(issue)
     distractionFreeMode = false # Enable hot key (cmd|ctrl + enter) submit comment.    
-    proxy = "https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token"可以自行添加反向代理
+    proxy = "https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token" # 可以自行添加反向代理
   [[params.links]]
     title = "Link"
     href = "https://github.com/meik2333"
