--- a/config.template.toml
+++ b/config.template.toml
@@ -20,7 +20,7 @@ pygmentsUseClasses = true
   keywords = "blog, google analytics"
   rss = true
   lastmod = true
-  favicon = "/images/github.png"
+  favicon = "/images/github.svg"
   location = "China"
   userStatusEmoji = "😀"
   enableGitalk = true
