--- a/config.template.toml
+++ b/config.template.toml
@@ -77,9 +77,9 @@ pygmentsUseClasses = true
     href = "https://meik2333.com"
     icon = "https://meik2333.com/images/avatar.png"
   [[params.customOrgs]]
-    link = "https://github.com/kurt-project"
-    img = "kurt-project.png" #Put your assets in static folder
-    name = "kurt-project"
+    link = "Custom link"
+    img = "Custom img" 
+    name = "Custom name"
 
   [params.Aplayer]
     Audio1 = ''
