--- a/config.template.toml
+++ b/config.template.toml
@@ -28,6 +28,7 @@ pygmentsUseClasses = true
   enableAplyer = false
   enableVssue = false
   enableCDN = false
+  enableGithubFollowers = false
 
   [params.CDN]
     gitalk-css = ''
@@ -45,7 +46,7 @@ pygmentsUseClasses = true
   userStatusEmoji = "😉"
   rss = true
   enableLocalSearch = true # Set to true if you want to have keyword search locally(params.rss true is required)
-  sponsorLink = "Your external sponsor link; For me, I use buymeacoffee link" # Set the link if you want to have a sponsor button and let audience know the your donation link
+  sponsorLink = "false" 
   customStyleFile = "your css file name"
   gtmId = "your gtm id"
   [params.gitalk]
@@ -65,8 +66,8 @@ pygmentsUseClasses = true
   [params.Vssue]
     clientID = "Your client ID" # Your client ID
     clientSecret = "Your client secret" # Your client secret
-    repo = "LuvSia" # 您的博客的github地址Repository name，例如：xxxx.github.io
-    owner = "ventusoon" # 您的GitHub ID
+    repo = "Repository name" # 您的博客的github地址Repository name，例如：xxxx.github.io
+    owner = "GitHub ID" # 您的GitHub ID
 
   [[params.links]]
     title = "Link"
