--- a/config.template.toml
+++ b/config.template.toml
@@ -29,6 +29,7 @@ pygmentsUseClasses = true
   enableVssue = false
   enableCDN = false
   enableGithubFollowers = false
+  enableGiscus = false
 
   [params.CDN]
     gitalk-css = ''
@@ -63,6 +64,16 @@ pygmentsUseClasses = true
     createIssueManually = true # 设置为true，如果是管理员登录，会自动创建issue，如果是false，需要管理员手动添加第一个评论(issue)
     distractionFreeMode = false # Enable hot key (cmd|ctrl + enter) submit comment.    
     proxy = "https://broken-wind-958e.29847163406422.workers.dev/https://github.com/login/oauth/access_token" # 可以自行添加反向代理
+    #more than gitalk
+    [params.giscus]
+     #install app first
+     #https://github.com/apps/giscus
+     #motified in Giscus.html
+    [params.gitalk]
+    clientID = "Your client ID" # Your client ID
+    clientSecret = "Your client secret" # Your client secret
+    repo = "your Repository name" # 您的博客的github地址Repository name，例如：xxxx.github.io
+    owner = "your GitHub ID" # 您的GitHub ID
 
   [params.Vssue]
     clientID = "Your client ID" # Your client ID
