--- a/theme.toml
+++ b/theme.toml
@@ -1,16 +1,16 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Github Style"
+name = "Github Style Pro"
 license = "MIT"
-licenselink = "https://github.com/MeiK2333/github-style/blob/master/LICENSE"
+licenselink = "https://github.com/ayamir/github-style-pro/blob/master/LICENSE"
 description = "github-style hugo theme"
-homepage = "https://github.com/MeiK2333"
-demosite = "https://meik2333.com/"
+homepage = "https://github.com/ayamir"
+demosite = "https://ayamir.github.io"
 tags = ["blog", "google analytics"]
 features = ["google analytics"]
 min_version = "0.41"
 
 [author]
-  name = "MeiK"
-  homepage = "https://github.com/MeiK2333"
+  name = "ayamir"
+  homepage = "https://github.com/ayamir"
