--- a/config.template.toml
+++ b/config.template.toml
@@ -19,28 +19,17 @@ pygmentsUseClasses = true
   headerIcon = "/images/github-mark-white.png"
   location = "China"
   userStatusEmoji = "😀"
-  enableGitalk = true
+  enableUtterances = true
 
-  [params.gitalk]
-    clientID = "Your client ID" # Your client ID
-    clientSecret = "Your client secret" # Your client secret
-    repo = "LuvSia" # 您的博客的github地址Repository name，例如：xxxx.github.io
-    owner = "ventusoon" # 您的GitHub ID
-    admin = "ventusoon" # 您的GitHub ID
-    id = "location.pathname" # 文章页面的链接地址就是ID
-    labels = "gitalk" # Github issue labels. If you used to use Gitment, you can change it
-    perPage = 15 # Pagination size, with maximum 100.
-    pagerDirection = "last" # Comment sorting direction, available values are 'last' and 'first'.
-    createIssueManually = true # 设置为true，如果是管理员登录，会自动创建issue，如果是false，需要管理员手动添加第一个评论(issue)
-    distractionFreeMode = false # Enable hot key (cmd|ctrl + enter) submit comment.
-    proxy = "https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token" # 可以自行添加反向代理
+  [[params.utterances]]
+    repo = "ayamir/ayamir.github.io"
   [[params.links]]
     title = "Link"
     href = "https://github.com/meik2333"
   [[params.links]]
-    title = "Link2"
-    href = "https://meik2333.com"
-    icon = "https://meik2333.com/images/avatar.png"
+    title = "zhihu"
+    href = "https://zhihu.com/people/MiraculousMoon"
+    icon = "/images/zhihu.png"
 
 [frontmatter]
   lastmod = ["lastmod", ":fileModTime", ":default"]
